# monocle

./: .gitignore  README.md  pyproject.toml
monocle/: main.py
monocle/core/: ocrService.py
monocle/ui/: __init__.py  app.py  customWidgets.py  imageWidget.py  mainWindow.py  main_window.py  notification.py
monocle/utils/: __init__.py  commonHelpers.py  iconUtils.py  imageUtils.py
scripts/: cleanUp.sh  run_app.sh
